--- a/lostandfound/src/main/resources/application.properties
+++ b/lostandfound/src/main/resources/application.properties
@@ -1,9 +1,21 @@
+# spring.application.name=CampusTrack
+# spring.datasource.url=jdbc:mysql://localhost:3306/campustrack?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+# spring.datasource.username=root
+# spring.datasource.password=******
+# # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# server.port=8080
+
 spring.application.name=CampusTrack
-spring.datasource.url=jdbc:mysql://localhost:3306/campus_track
+
+spring.datasource.url=jdbc:mysql://mainline.proxy.rlwy.net:42600/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=152007
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=wsPQUvknBEiKOeEztjMMuflcJFxaTULl
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 server.port=8080
