--- a/lostandfound/src/main/resources/application.properties
+++ b/lostandfound/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 server.port=8080
+spring.datasource.hikari.connection-timeout=30000
