--- a/lostandfound/src/main/resources/application.properties
+++ b/lostandfound/src/main/resources/application.properties
@@ -20,3 +20,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 server.port=8080
 spring.datasource.hikari.connection-timeout=30000
+
+# Make session cookie usable for cross-site requests from deployed frontend
+# When the frontend is served over HTTPS and the backend sets cookies for session auth,
+# the cookie must be Secure and SameSite=None to be sent in cross-site requests.
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.same-site=None
