--- a/lostandfound/src/main/resources/application.properties
+++ b/lostandfound/src/main/resources/application.properties
@@ -8,21 +8,31 @@
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # server.port=8080
 
+# spring.application.name=CampusTrack
+
+# spring.datasource.url=jdbc:mysql://root:ZknusEbIQTuGxCfHWoEbvcXHziXQdFwA@yamabiko.proxy.rlwy.net:14249/railway
+# spring.datasource.username=root
+# spring.datasource.password=ZknusEbIQTuGxCfHWoEbvcXHziXQdFwA
+
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# server.port=8080
+# spring.datasource.hikari.connection-timeout=30000
+
+# # Make session cookie usable for cross-site requests from deployed frontend
+# # When the frontend is served over HTTPS and the backend sets cookies for session auth,
+# # the cookie must be Secure and SameSite=None to be sent in cross-site requests.
+# server.servlet.session.cookie.secure=true
+# server.servlet.session.cookie.same-site=None
+
 spring.application.name=CampusTrack
-
-spring.datasource.url=jdbc:mysql://mainline.proxy.rlwy.net:42600/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/campus_track
 spring.datasource.username=root
-spring.datasource.password=wsPQUvknBEiKOeEztjMMuflcJFxaTULl
-
+spring.datasource.password=152007
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
 server.port=8080
-spring.datasource.hikari.connection-timeout=30000
-
-# Make session cookie usable for cross-site requests from deployed frontend
-# When the frontend is served over HTTPS and the backend sets cookies for session auth,
-# the cookie must be Secure and SameSite=None to be sent in cross-site requests.
-server.servlet.session.cookie.secure=true
-server.servlet.session.cookie.same-site=None
